<resources>
    <string name="mt_app_name">MediaTo</string>

    <!--CreateProfileFragment-->
    <string name="mt_username_error_null">The username is null</string>
    <string name="mt_username_error_too_short">The username is too short</string>
    <string name="mt_username_error_already_taken">The username is already taken</string>

    <!--fragment_create_profile.xml-->
    <string name="mt_new_profile_topbar">Create your profile</string>
    <string name="mt_profile_image_button_description">Select picture</string>
    <string name="mt_username_hint">Username</string>
    <string name="mt_username_helper_text">Between 4–20 characters</string>
    <string name="mt_username_description_end_icon">Generate a username</string>
    <string name="mt_button_create_profile">Create</string>

    <!--Navigation Bar-->
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!--User Profile-->
    <string name="default_collection">Favorite</string>
    <string name="username">Username</string>
    <string name="recently_watched">Recently watched</string>
    <string name="title">Title</string>
    <string name="rating">Rating: </string>
    <string name="add_collection">Add collection</string>
    <string name="signout">Sign-out</string>
    <string name="delete_collection">Are you sure you want to delete the collection:  %1$s ?</string>
    <string name="profile_shared_preferences">sharedPreferencesProfile</string>
    <string name="followers_shared_preferences_key">sharedPreferencesFollowersKey</string>
    <string name="following_shared_preferences_key">sharedPreferencesFollowingKey</string>


  <!--Buttons-->
  <string name="edit">Edit</string>
  <string name="add">Add</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="film">Film</string>
  <string name="books">Books</string>
  <string name="refresh">Refresh</string>
  <string name="followers_button">%d Followers</string>
  <string name="following_button">%d Following</string>
  <string name="review_user_follow_button">Follow</string>
  <string name="like_button">Like</string>
  <string name="dislike_button">Dislike</string>
  <string name="comments">Comments</string>

    <!-- Search Categories -->
    <string name="search_category_movies">Movies</string>
    <string name="search_category_books">Books</string>
    <string name="search_category_people">People</string>
    <string name="search_category_music">Music</string>

    <!-- Search User -->
    <string name="searchUser_follow">Follow</string>
    <string name="searchUser_unfollow">Unfollow</string>
    <string name="searchUser_profilePicture">Profile picture</string>

    <!--API Urls-->
    <string name="tmdb_url">https://api.themoviedb.org/</string>
    <string name="gbook_url">https://www.googleapis.com/</string>
    <string name="ytb_url">https://www.youtube.com/watch?v=</string>


    <!-- New Item Page -->
    <string name="new_item_edit_text_initial">Type your review\n</string>
    <string name="new_item_rating_section_title">Your Rating</string>
    <string name="new_item_review_section_title">Your Review</string>
    <string name="new_item_title">Title</string>
    <string name="new_item_description">Description of the item in a few lines</string>
    <string name="new_item_image_description">Image of the currently rated and reviewed item</string>

    <!--Authentication-->
    <string name="authentication_page_welcome_title">Welcome to MediaTo</string>
    <string name="authentication_page_login_text">Please login to continue</string>
    <string name="authentication_page_waiting_text">Please wait while you are being logged in …</string>


    <!--Toast messages-->
    <string name="profile_creation_success">Profile creation successful!</string>
    <string name="searchUserFailed">Failed to search users</string>

    <string name="following">Following</string>
    <string name="followers">Followers</string>

    <string name="collection_empty_name">Collection name cannot be empty</string>
    <string name="collection_name_already_exists">Collection name already exists</string>
    <string name="movie_name">movie_name</string>

    <string name="default_profile_pic">https://thumbs.dreamstime.com/b/default-avatar-profile-icon-vector-social-media-user-image-182145777.jpg</string>
    <string name="login_shared_preferences">sharedPreferencesLogin</string>
    <string name="google_id_token_key">google_id_token</string>
    <string name="google_access_token_key">google_access_token</string>
    <string name="username_key">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openlibrary_url">https://openlibrary.org/</string>

  <!-- String used by cache to easily store the trending output in the database -->
  <string name="trending_dedup">LPGFtQHBtKHwhrEqNRPM</string>

    <string-array name="years_array">
        <item>Year</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>
        <item>1904</item>
        <item>1903</item>
        <item>1902</item>
        <item>1901</item>
        <item>1900</item>
    </string-array>
</resources>