<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:id="@+id/searchUserAdapter_imageView"
                android:layout_width="@dimen/profile_picture_small"
                android:layout_height="@dimen/profile_picture_small"
                app:srcCompat="@drawable/profile_picture_default"
                android:scaleType="centerCrop"
                android:contentDescription="@string/searchUser_profilePicture"
                />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/searchUserAdapter_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/searchUserAdapter_followButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/searchUser_follow"
                        style="?attr/borderlessButtonStyle"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/searchUserAdapter_unfollowButton"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/searchUser_unfollow"
                        android:textColor="#F44336" />
                </FrameLayout>



            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
