<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#a6a29b">

        <android.widget.SearchView
            android:id="@+id/searchactivity_searchview_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/searchactivity_setCategorie_people"
                android:text="@string/search_category_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="#0b1a33"
                android:padding="0dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/searchactivity_setCategorie_books"
                android:text="@string/search_category_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="#0b1a33"
                android:padding="0dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/searchactivity_setCategorie_film"
                android:text="@string/search_category_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="#0b1a33"
                android:padding="0dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/searchactivity_setCategorie_music"
                android:text="@string/search_category_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="#0b1a33"
                android:padding="0dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/searchactivity_textView_textDuringAfterSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/searchactivity_gridview_searchresults"
        android:numColumns="3" />

</LinearLayout>