<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- Media -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userAdapter_imageView"
                android:layout_width="@dimen/profile_picture_small"
                android:layout_height="@dimen/profile_picture_small"
                android:layout_gravity="start"
                android:src="@drawable/profile_picture_default"
                android:contentDescription="@string/searchUser_profilePicture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userAdapter_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/userAdapter_followButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/searchUser_follow"
                        android:visibility="gone"
                        style="?attr/borderlessButtonStyle"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/userAdapter_unfollowButton"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/searchUser_unfollow"
                        android:visibility="gone"
                        android:textColor="#F44336" />
                </FrameLayout>



            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
