<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/colorPrimary">

        <androidx.appcompat.widget.SearchView
          android:id="@+id/searchbar"
          android:visibility="visible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:layout_marginBottom="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp">

            <Button
              android:id="@+id/search_category_people"
              android:text="@string/search_category_people"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:textColor="?attr/colorOnPrimary"
              android:padding="0dp"
              style="?android:attr/buttonBarButtonStyle" />

            <Button
              android:id="@+id/search_category_books"
              android:text="@string/search_category_books"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:textColor="?attr/colorOnPrimary"
              android:padding="0dp"
              style="?android:attr/buttonBarButtonStyle" />

            <Button
              android:id="@+id/search_category_movie"
              android:text="@string/search_category_movies"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:textColor="?attr/colorOnPrimary"
              android:padding="0dp"
              style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_movies_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Spinner
            android:id="@+id/years_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog"/>

        <Spinner
            android:id="@+id/genre_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:spinnerMode="dialog"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_filter"
            style="?attr/borderlessButtonStyle"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Reset"
            android:visibility="visible"
            android:textColor="#F44336" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userSearch_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookSearch_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookTrending_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieSearch_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieTrending_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>
    </FrameLayout>

</LinearLayout>